resolved layout issue with matches / favorites

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -287,3 +287,7 @@ ul.green li a {
 ul.green li a:hover {
 	background-color: blue;
 }
+
+.matchesDiv {
+	height: 350px;
+}
